# api/openapi.yml
@@ -1,4 +1,4 @@
-openapi: 3.1.0
+openapi: 3.0.4
 info:
   title: MTS Online Shop
   version: 0.0.1
@@ -63,6 +63,11 @@ paths:
       responses:
         '200':
           description: Корзина очищена
+          content:
+            application/json:
+              schema:
+                type: string
+                example: Корзина успешно очищена
 
   /goods/{user_id}/{product_id}:
     post:
@@ -120,9 +125,8 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/Product"
+                type: string
+                example: Товар удален из корзины
 
   /orders:
     post:
